XSCOLIBRI-126: Inline verbatim loose white spaces Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk/colibri@24329 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
+++ b/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
@@ -146,12 +146,12 @@ a img {
 }
 
 tt, tt *, tt tt.wikimodel-verbatim {
-    font-family: monospace;
+  font-family: monospace;
 }
 
-
 tt.wikimodel-verbatim {
-    font-family: sans-serif;
+  font-family: sans-serif;
+  white-space: pre;
 }
 
 em {
